// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the create connector dialog Should render the connector modal 1`] = `
<div
  class="bp3-dialog createConnectorDialog"
  style="width: 860px; position: relative; height: 500px;"
>
  <div
    class="Layout--horizontal StyledProps--main"
    style="height: 100%;"
  >
    <div
      class="StyledProps--font StyledProps--main connectorsSection"
    >
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main"
      >
        Welcome!
      </h1>
      <p
        class="StyledProps--font StyledProps--main"
      >
        Let’s get you started with Cloud Cost Management
      </p>
      <p
        class="StyledProps--font StyledProps--main"
      >
        To begin with, you need to create a Connector that will pull in data from your Cloud provider into CCM
      </p>
      <section
        style="padding-top: 15px;"
      >
        <p
          class="StyledProps--font StyledProps--main selectProviderLabel"
        >
          Select your Cloud provider
        </p>
        <div
          class="cloudProviderListContainer"
        >
          <div
            class="listContainer"
          >
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
              data-index="0"
              tabindex="0"
            >
              <div>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-aws"
                >
                  <svg
                    height="26"
                    viewBox="0 0 14 10"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                      fill="#252f3e"
                    />
                    <g
                      fill="#f90"
                    >
                      <path
                        d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                      />
                      <path
                        d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                      />
                    </g>
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
              data-index="1"
              tabindex="0"
            >
              <div>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="gcp"
                >
                  <svg
                    height="26"
                    viewBox="0 0 1667 1341"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                    >
                      <path
                        d="M1058.1 369.2h50.8l144.8-144.8 7.1-61.5C991.3-75 580-49.3 342.1 220.2 276 295 228.1 384.1 201.9 480.5c16.1-6.6 34-7.7 50.8-3l289.6-47.8s14.7-24.4 22.4-22.9c128.8-141.5 345.6-158 494.4-37.6h-1z"
                        fill="#EA4335"
                      />
                      <path
                        d="M1460 480.5c-33.3-122.6-101.6-232.8-196.6-317l-203.2 203.2c85.8 70.1 134.7 175.8 132.6 286.6v36.1c99.9 0 180.9 81 180.9 180.9s-81 180.9-180.9 180.9H831l-36.1 36.6v217l36.1 36.1h361.8c259.8 2 472.1-207 474.1-466.8 1.2-157.8-76.5-305.4-206.9-393.6z"
                        fill="#4285F4"
                      />
                      <path
                        d="M468.7 1338.6h361.8V1049H468.7c-25.8 0-51.2-5.6-74.7-16.3l-50.8 15.8-145.8 144.8-12.7 50.8c81.7 61.8 181.5 95 284 94.5z"
                        fill="#34A853"
                      />
                      <path
                        d="M468.7 399.196C208.8 400.7-.5 612.6.992 872.5 1.9 1017.6 69.6 1154.2 184.7 1242.6l209.8-209.8c-91-41.1-131.5-148.3-90.4-239.3 41.1-91 148.3-131.5 239.3-90.4 40.1 18.1 72.2 50.3 90.4 90.4l209.8-209.8c-89.2-116.8-228-185.1-374.9-184.504z"
                        fill="#FBBC05"
                      />
                    </g>
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
              data-index="2"
              tabindex="0"
            >
              <div>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-azure"
                >
                  <svg
                    height="26"
                    viewBox="0 0 14 12"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="#2075b7"
                    >
                      <path
                        d="M14 11.3H3.5c2.1-.4 4.2-.7 6.3-1.1 0-.1 0-.1-.1-.1-1.1-1.4-2.2-2.7-3.2-3.9-.1-.1-.1-.2 0-.2.4-1.1.8-2.1 1.1-3.2.2-.5.4-1 .5-1.5 0 0 0-.1.1-.1C10.1 4.6 12 7.9 14 11.3zM7.7.5c-.2.4-.4.7-.5 1.1-1 2.1-1.9 4.1-2.9 6.2-.3.7-.7 1.4-1 2.2 0 .1-.1.1-.2.1H.2c-.2 0-.2 0-.1-.1 1.1-2 2.3-3.9 3.4-5.9 0-.1.1-.2.2-.3C5 2.8 6.3 1.7 7.6.6c0 0 0-.1.1-.1z"
                      />
                    </g>
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
              data-index="3"
              tabindex="0"
            >
              <div>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-kubernetes"
                >
                  <svg
                    height="26"
                    viewBox="0 0 14 14"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                      fill="#326ce5"
                    />
                    <path
                      d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                      fill="#fff"
                      stroke="#fff"
                      stroke-width="0.25"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
          <div
            class="textList"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              common.aws
            </p>
            <p
              class="StyledProps--font StyledProps--main"
            >
              common.gcp
            </p>
            <p
              class="StyledProps--font StyledProps--main"
            >
              common.azure
            </p>
            <p
              class="StyledProps--font StyledProps--main"
            >
              kubernetesText
            </p>
          </div>
        </div>
      </section>
      <button
        class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main nextButton StyledProps--intent-primary Button--with-current-color"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Next
        </span>
      </button>
    </div>
    <div
      class="StyledProps--font StyledProps--main carouselSection"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main Carousel--carousel featuresCarousel StyledProps--padding-small"
      >
        <div
          class="Carousel--carouselView"
        >
          <div
            class="Carousel--carouselItem Carousel--active"
          >
            <div
              class="featureSlide"
            >
              <div
                class="title"
              >
                Create Cost perspectives
              </div>
              <div
                class="imgContainer"
              >
                <img
                  alt="Create Cost perspectives"
                  src="test-file-stub"
                />
              </div>
              <p>
                Create visualisations of relevant data to specific teams, groups, departments, BUs, LOBs cost-centers etc. This provides relevant data to specific teams for decentralized cost management.
              </p>
            </div>
          </div>
          <div
            class="Carousel--carouselItem Carousel--carouselItemNext"
          >
            <div
              class="featureSlide"
            >
              <div
                class="title"
              >
                Set Budgets and receive Alerts on anomalies and overspend
              </div>
              <div
                class="imgContainer"
              >
                <img
                  alt="Set Budgets and receive Alerts on anomalies and overspend"
                  src="test-file-stub"
                />
              </div>
              <p>
                Once a perspective is created you can schedule 
                <b>
                  reports
                </b>
                , create budgets, configure 
                <b>
                  anomaly alerts
                </b>
                , get 
                <b>
                  recommendations
                </b>
                 to improve save costs for a decentralised cost management.
              </p>
            </div>
          </div>
          <div
            class="Carousel--carouselItem"
          >
            <div
              class="featureSlide"
            >
              <div
                class="title"
              >
                Create AutoStopping rules
              </div>
              <div
                class="imgContainer"
              >
                <img
                  alt="Create AutoStopping rules"
                  src="test-file-stub"
                />
              </div>
              <p>
                AutoStopping Rules dynamically make sure that your non-production workloads are running (and costing you) only when you’re using them, and never when they are idle.
              </p>
            </div>
          </div>
          <div
            class="Carousel--carouselRight"
          >
            <div>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                data-icon="main-chevron-right"
              >
                <svg
                  height="20"
                  viewBox="0 0 8 14"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="Carousel--carouselIndicators"
        >
          <span
            class="Carousel--indicator Carousel--active"
          />
          <span
            class="Carousel--indicator"
          />
          <span
            class="Carousel--indicator"
          />
        </div>
      </div>
    </div>
  </div>
  <button
    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
    data-testid="close-instance-modal"
    style="position: absolute;"
    type="button"
  >
    <span
      class="bp3-icon bp3-icon-cross StyledProps--main"
      icon="cross"
    >
      <svg
        data-icon="cross"
        height="18"
        viewBox="0 0 16 16"
        width="18"
      >
        <desc>
          cross
        </desc>
        <path
          d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Should render the create connector dialog Should render the minimal connector modal 1`] = `
<div
  class="bp3-dialog"
  style="width: 450px; padding: 40px;"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-weight-bold StyledProps--font-size-normal"
    style="margin-bottom: 10px;"
  >
    You have not added any connectors yet.
  </p>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-weight-bold StyledProps--font-size-normal"
    style="margin-bottom: 20px;"
  >
    Create one to plug in your data and start exploring Cloud cost Management and everything it has to offer!
  </p>
  <p
    class="StyledProps--font StyledProps--main StyledProps--font-size-normal"
    style="margin-bottom: 10px;"
  >
    Choose your cloud Provider
  </p>
  <div
    class="cloudProviderListContainer"
  >
    <div
      class="listContainer"
    >
      <div
        class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
        data-index="0"
        tabindex="0"
      >
        <div>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="service-aws"
          >
            <svg
              height="26"
              viewBox="0 0 14 10"
              width="26"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                fill="#252f3e"
              />
              <g
                fill="#f90"
              >
                <path
                  d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                />
                <path
                  d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
      <div
        class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
        data-index="1"
        tabindex="0"
      >
        <div>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="gcp"
          >
            <svg
              height="26"
              viewBox="0 0 1667 1341"
              width="26"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
              >
                <path
                  d="M1058.1 369.2h50.8l144.8-144.8 7.1-61.5C991.3-75 580-49.3 342.1 220.2 276 295 228.1 384.1 201.9 480.5c16.1-6.6 34-7.7 50.8-3l289.6-47.8s14.7-24.4 22.4-22.9c128.8-141.5 345.6-158 494.4-37.6h-1z"
                  fill="#EA4335"
                />
                <path
                  d="M1460 480.5c-33.3-122.6-101.6-232.8-196.6-317l-203.2 203.2c85.8 70.1 134.7 175.8 132.6 286.6v36.1c99.9 0 180.9 81 180.9 180.9s-81 180.9-180.9 180.9H831l-36.1 36.6v217l36.1 36.1h361.8c259.8 2 472.1-207 474.1-466.8 1.2-157.8-76.5-305.4-206.9-393.6z"
                  fill="#4285F4"
                />
                <path
                  d="M468.7 1338.6h361.8V1049H468.7c-25.8 0-51.2-5.6-74.7-16.3l-50.8 15.8-145.8 144.8-12.7 50.8c81.7 61.8 181.5 95 284 94.5z"
                  fill="#34A853"
                />
                <path
                  d="M468.7 399.196C208.8 400.7-.5 612.6.992 872.5 1.9 1017.6 69.6 1154.2 184.7 1242.6l209.8-209.8c-91-41.1-131.5-148.3-90.4-239.3 41.1-91 148.3-131.5 239.3-90.4 40.1 18.1 72.2 50.3 90.4 90.4l209.8-209.8c-89.2-116.8-228-185.1-374.9-184.504z"
                  fill="#FBBC05"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
      <div
        class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
        data-index="2"
        tabindex="0"
      >
        <div>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="service-azure"
          >
            <svg
              height="26"
              viewBox="0 0 14 12"
              width="26"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="#2075b7"
              >
                <path
                  d="M14 11.3H3.5c2.1-.4 4.2-.7 6.3-1.1 0-.1 0-.1-.1-.1-1.1-1.4-2.2-2.7-3.2-3.9-.1-.1-.1-.2 0-.2.4-1.1.8-2.1 1.1-3.2.2-.5.4-1 .5-1.5 0 0 0-.1.1-.1C10.1 4.6 12 7.9 14 11.3zM7.7.5c-.2.4-.4.7-.5 1.1-1 2.1-1.9 4.1-2.9 6.2-.3.7-.7 1.4-1 2.2 0 .1-.1.1-.2.1H.2c-.2 0-.2 0-.1-.1 1.1-2 2.3-3.9 3.4-5.9 0-.1.1-.2.2-.3C5 2.8 6.3 1.7 7.6.6c0 0 0-.1.1-.1z"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
      <div
        class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
        data-index="3"
        tabindex="0"
      >
        <div>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="service-kubernetes"
          >
            <svg
              height="26"
              viewBox="0 0 14 14"
              width="26"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                fill="#326ce5"
              />
              <path
                d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                fill="#fff"
                stroke="#fff"
                stroke-width="0.25"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="textList"
    >
      <p
        class="StyledProps--font StyledProps--main"
      >
        common.aws
      </p>
      <p
        class="StyledProps--font StyledProps--main"
      >
        common.gcp
      </p>
      <p
        class="StyledProps--font StyledProps--main"
      >
        common.azure
      </p>
      <p
        class="StyledProps--font StyledProps--main"
      >
        kubernetesText
      </p>
    </div>
  </div>
</div>
`;

exports[`Should render the create connector dialog Test case for no connector data 1`] = `
<div>
  <div
    style="background-image: url(test-file-stub); background-size: cover; height: 100%; width: 100%;"
  >
    <div
      class="nodata"
    >
      <div
        class="noDataContent"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-xxxlarge StyledProps--main"
        >
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
              style="align-items: center;"
            >
              <img
                height="150"
                src="test-file-stub"
              />
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-normal"
                style="line-height: 25px;"
              >
                ce.overview.noData.info
              </p>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
            >
              ce.overview.noData.explore
            </p>
            <div
              class="Layout--horizontal StyledProps--main"
              style="justify-content: space-evenly; margin-top: 25px;"
            >
              <div
                class="Layout--vertical StyledProps--main"
              >
                <img
                  height="75"
                  src="test-file-stub"
                />
                <p
                  class="StyledProps--font StyledProps--main StyledProps--padding-medium StyledProps--color StyledProps--color-primary7"
                  style="cursor: pointer;"
                >
                  ce.overview.noData.autoStopping
                </p>
              </div>
              <div
                class="Layout--vertical StyledProps--main"
              >
                <img
                  height="75"
                  src="test-file-stub"
                />
                <p
                  class="StyledProps--font StyledProps--main StyledProps--padding-medium StyledProps--color StyledProps--color-primary7"
                  style="cursor: pointer;"
                >
                  ce.overview.noData.connector
                </p>
              </div>
              <div
                class="Layout--vertical StyledProps--main"
              >
                <img
                  height="75"
                  src="test-file-stub"
                />
                <a
                  class="ngDocs"
                  href="http://docs.harness.io/"
                  rel="noreferrer"
                  target="_blank"
                >
                  ce.overview.noData.ngDocs
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
